--- a/confs/esp8266.yaml
+++ b/confs/esp8266.yaml
@@ -1,5 +1,5 @@
 esp8266:
-  board: esp07s
+  board: d1_mini
 
   framework:
     version: dev
@@ -7,12 +7,12 @@ esp8266:
 uart:
   id: uart_ecodan
   rx_pin:
-    number: GPIO14
+    number: GPIO3
     mode:
       input: true
       pullup: true
   tx_pin:
-    number: GPIO16
+    number: GPIO1
     mode:
       output: true
   baud_rate: 2400
