--- a/confs/ecodan-labels-swe.yaml
+++ b/confs/ecodan-labels-swe.yaml
@@ -1,97 +1,97 @@
 substitutions:
   status_three_way_valve: 3-vägs Ventil
   status_three_way_valve_2: 3-vägs Ventil 2
-  heatpump_climate_dhw: DHW Climate
-  dhw_temp: DHW Current Temp
-  dhw_secondary_temp: DHW Secondary Temp
-  status_dhw_forced: DHW Forced
-  dhw_flow_temp_drop: DHW Max Temp Drop
-  status_prohibit_dhw: DHW Prohibit
-  dhw_flow_temp_target: DHW Setpoint Value
-  status_dhw_eco: DHW Eco
+  heatpump_climate_dhw: Tappvarmvatten Klimat
+  dhw_temp: Tappvarmvatten Temp
+  dhw_secondary_temp: Tappvarmvatten sekundär Temp
+  status_dhw_forced: Tappvarmvatten Tvinga
+  dhw_flow_temp_drop: Tappvarmvatten Max Temperaturfall
+  status_prohibit_dhw: Tappvarmvatten Förbjud
+  dhw_flow_temp_target: Tappvarmvatten Börvärde
+  status_dhw_eco: Tappvarmvatten Eco
   esp_ip: ESP IP
-  internal_esp_temperature: ESP Internal Temperature
+  internal_esp_temperature: ESP Intern Temp
   esp_sidd: ESP SSID
   uptime: ESP Uptime
   esp_version: ESP Version
   restart_button: ESP Restart
-  status_in1_request: In1 Thermostat
-  status_in6_request: In6 Thermostat 2
-  status_in5_request: In5 Outdoor Thermostat
-  heatpump_select_dhw_mode: DHW Mode
+  status_in1_request: In1 Termostat
+  status_in6_request: In6 Termostat 2
+  status_in5_request: In5 Ute Termostat
+  heatpump_select_dhw_mode: Tappvarmvatten Läge
   normal: Normal
   eco: Eco
   version: ESP Version
-  led_brightness: LED Brightness
+  led_brightness: LED Ljusstyrka
   led_switch: LED
-  heatpump_switch_force_dhw: Force DHW
+  heatpump_switch_force_dhw: Tvinga Tappvarmvatten
   heatpump_switch_power_mode: Värmepump
-  heatpump_switch_holiday: Holiday Mode
+  heatpump_switch_holiday: Semesterläge
   wifi_signal_proc: WiFi Signal %
   wifi_signal_db: WiFi Signal dB
-  z1_flow_temp_target: Zone 1 H/C Setpoint Value
-  status_prohibit_cool_z1: Zone 1 Prohibit Cooling Status
-  status_prohibit_heating_z1: Zone 1 Prohibit Heating
-  heatpump_climate_z1: Zone 1 Climate
-  z1_room_temp_target: Zone 1 Room Setpoint Value
-  z1_room_temp: Zone 1 Room Temp
-  heatpump_number_z2_set_flow_temperature: Zone 2 H/C setpoint
-  z2_flow_temp_target: Zone 2 H/C Setpoint Value
-  status_prohibit_cool_z2: Zone 2 Prohibit Cooling
-  status_prohibit_heating_z2: Zone 2 Prohibit Heating
-  heatpump_number_z2_set_room_temperature: Zone 2 Room Setpoint
-  heatpump_climate_z2: Zone 2 Climate
-  z2_room_temp_target: Zone 2 Room Setpoint Value
-  z2_room_temp: Zone 2 Room Temp
-  boiler_flow_temp: Boiler Flow Temp
-  boiler_return_temp: Boiler Return Temp
-  status_booster: Booster Heater
-  compressor_frequency: Compressor Frequency
-  controller_version_text: Controller Version
-  cool_consumed: Cool Consumed
-  cool_cop: Cool COP
-  cool_delivered: Cool Delivered
-  status_defrost: Defrost
-  dhw_consumed: DHW Consumed
-  dhw_cop: DHW COP
-  dhw_delivered: DHW Delivered
-  hp_feed_temp: Feed Temp
-  z1_feed_temp: Z1 Feed Temp
-  z2_feed_temp: Z2 Feed Temp
-  flow_rate: Flow Rate
-  heat_source_text: Heat Source
-  heatpump: Heatpump
-  immersion_heater: Immersion Heater
-  booster_heater: Booster Heater
-  immersion_and_booster_heater: Immersion and Booster Heater
-  boiler: Boiler
-  heating_consumed: Heating Consumed
-  heating_cop: Heating COP
-  heating_delivered: Heating Delivered
-  status_holiday: Holiday Mode
-  status_immersion: Immersion Heater
-  legionella_prevention_temp: Legionella Prevention Temp
-  heatpump_select_operating_mode: Selected operating mode
-  heat_target_temperature: Heat Target Temperature
-  heat_flow_temperature: Heat Flow Temperature
-  heat_compensation_curve: Heat Compensation Curve
-  cool_target_temperature: Cool Target Temperature
-  cool_flow_temperature: Cool Flow Temperature
+  z1_flow_temp_target: Zon1 V/K Börvärde
+  status_prohibit_cool_z1: Zon1 Förbjud Kyla
+  status_prohibit_heating_z1: Zon1 Förbjud Värme
+  heatpump_climate_z1: Zon1 Klimat
+  z1_room_temp_target: Zon1 Rumsbörvärde
+  z1_room_temp: Zon1 Rumstemperatur
+  heatpump_number_z2_set_flow_temperature: Zon2 V/K Börvärde
+  z2_flow_temp_target: Zon2 V/K Börvärde
+  status_prohibit_cool_z2: Zon2 Förbjud Kyla
+  status_prohibit_heating_z2: Zon2 Förbjud Värme
+  heatpump_number_z2_set_room_temperature: Zon2 Rrumsbörvärde
+  heatpump_climate_z2: Zon2 Klimat
+  z2_room_temp_target: Zon2 Rumsbörvärde
+  z2_room_temp: Zon2 Rumstemperatur
+  boiler_flow_temp: Tilloppstemp Panna
+  boiler_return_temp: Returtemp Panna
+  status_booster: Tillskott Värme
+  compressor_frequency: Kompressorfrekvens
+  controller_version_text: Controllerversion
+  cool_consumed: Kyla Förbrukad
+  cool_cop: Kyla COP
+  cool_delivered: Kyla Levererad
+  status_defrost: Avfrostning
+  dhw_consumed: Tappvarmvatten Förbrukad
+  dhw_cop: Tappvarmvatten COP
+  dhw_delivered: Tappvarmvatten Levererad
+  hp_feed_temp: Matning Temp
+  z1_feed_temp: Z1 Matning Temp
+  z2_feed_temp: Z2 Matning Temp
+  flow_rate: Flödeshastighet
+  heat_source_text: Värmekälla
+  heatpump: Värmepump
+  immersion_heater: Elpatron
+  booster_heater: Tillskott
+  immersion_and_booster_heater: Elpatron Och Tillskott
+  boiler: Panna
+  heating_consumed: Värme Förbrukad
+  heating_cop: Värme COP
+  heating_delivered: Värme Levererad
+  status_holiday: Semesterläge
+  status_immersion: Elpatron
+  legionella_prevention_temp: Legionella Börvärde
+  heatpump_select_operating_mode: Valt driftläge
+  heat_target_temperature: Värme Börfärde
+  heat_flow_temperature: Tilloppstemperatur Värme
+  heat_compensation_curve: Värmekompensationskurva
+  cool_target_temperature: Kyla Börvärde
+  cool_flow_temperature: Kyla Tilloppstemperatur
   operation_off: "Off"
-  hotwater: Heating Water
-  heating: Space Heating
-  cooling: Space Cooling
-  frost_protection: Frost Protection
-  legionella_prevention: Legionella Prevention
-  runtime: Operating Runtime
-  status_operation: Operation Mode
-  output_power: Output Power
-  computed_output_power: Estimated Output Power
-  outside_temp: Outside Temp
-  hp_refrigerant_temp: Refrigerant Liquid Temp
-  hp_refrigerant_condensing_temp: Refrigerant Condensing Temp
-  hp_return_temp: Return Temp
-  z1_return_temp: Z1 Return Temp
-  z2_return_temp: Z2 Return Temp 
-  status_water_pump: Water Pump Status
-  status_water_pump_2: Water Pump 2 Status
+  hotwater: Värmer Vatten
+  heating: Rumsuppvärmning
+  cooling: Rumskylning
+  frost_protection: Frostskydd
+  legionella_prevention: Legionella Motverkan
+  runtime: Drifttid
+  status_operation: Driftläge
+  output_power: Effektuttag
+  computed_output_power: Beräknat Effektuttag
+  outside_temp: Utetemp
+  hp_refrigerant_temp: Köldmedium Temp
+  hp_refrigerant_condensing_temp: Köldmedium Kondenseringstemp
+  hp_return_temp: Retur Temp
+  z1_return_temp: Z1 Retur Temp
+  z2_return_temp: Z2 Retur Temp 
+  status_water_pump: Cirkulationspump Status
+  status_water_pump_2: Cirkulationspump 2 Status
