--- a/confs/base.yaml
+++ b/confs/base.yaml
@@ -1,3 +1,4 @@
+
 ####################
 # heatpump commands
 
@@ -130,6 +131,7 @@ text_sensor:
         case 1: return std::string("FTC4");
         case 2: return std::string("FTC5");
         case 3: return std::string("FTC6");
+        case 4: return std::string("FTC7");
         default: return std::to_string(value);
       }
 
