--- a/confs/ecodan-labels-en.yaml
+++ b/confs/ecodan-labels-en.yaml
@@ -33,6 +33,7 @@ substitutions:
   status_prohibit_cool_z1: Zone 1 Prohibit Cooling Status
   status_prohibit_heating_z1: Zone 1 Prohibit Heating
   heatpump_climate_z1: Zone 1 Climate
+  heatpump_climate_room_z1: Zone 1 Temperature
   z1_room_temp_target: Zone 1 Room Setpoint Value
   z1_room_temp: Zone 1 Room Temp
   heatpump_number_z2_set_flow_temperature: Zone 2 H/C setpoint
@@ -41,13 +42,17 @@ substitutions:
   status_prohibit_heating_z2: Zone 2 Prohibit Heating
   heatpump_number_z2_set_room_temperature: Zone 2 Room Setpoint
   heatpump_climate_z2: Zone 2 Climate
+  heatpump_climate_room_z2: Zone 2 Temperature
   z2_room_temp_target: Zone 2 Room Setpoint Value
   z2_room_temp: Zone 2 Room Temp
+  mixing_tank_temp: Mixing Tank Temp
   boiler_flow_temp: Boiler Flow Temp
   boiler_return_temp: Boiler Return Temp
   status_booster: Booster Heater
   compressor_frequency: Compressor Frequency
   controller_version_text: Controller Version
+  controller_firmware_text: Controller Firmware
+  controller_datetime_text: Controller Date
   cool_consumed: Cool Consumed
   cool_cop: Cool COP
   cool_delivered: Cool Delivered
@@ -95,3 +100,5 @@ substitutions:
   z2_return_temp: Z2 Return Temp 
   status_water_pump: Water Pump Status
   status_water_pump_2: Water Pump 2 Status
+  fault_code_text: Fault code
+  refrigerant_error_code_text: Refrigerant error code
