--- a/confs/ecodan-labels-it.yaml
+++ b/confs/ecodan-labels-it.yaml
@@ -33,6 +33,7 @@ substitutions:
   status_prohibit_cool_z1: Z1 Raff. Proibito
   status_prohibit_heating_z1: Z1 Risc. Proibito
   heatpump_climate_z1: Z1 Termostato
+  heatpump_climate_room_z1: Z1 temperatura
   z1_room_temp_target: Z1 T. Ambiente Desiderata
   z1_room_temp: Z1 T. Ambiente
   heatpump_number_z2_set_flow_temperature: Z2 C/F Mandata
@@ -41,13 +42,17 @@ substitutions:
   status_prohibit_heating_z2: Z2 Risc. Proibito
   heatpump_number_z2_set_room_temperature: Z2 T. Ambiente
   heatpump_climate_z2: Z2 Termostato
+  heatpump_climate_room_z2: Z2 temperatura
   z2_room_temp_target: Z2 T. Ambiente Desiderata
   z2_room_temp: Z2 T. Ambiente
+  mixing_tank_temp: Caldaia Mixing Tank
   boiler_flow_temp: Caldaia T. Mandata
   boiler_return_temp: Caldaia T. Ritorno
   status_booster: Riscaldatore Booster
   compressor_frequency: Freq. Compressore
   controller_version_text: Controller
+  controller_firmware_text: Controller Firmware
+  controller_datetime_text: Controller Date
   cool_consumed: En. Raff. Utilizzata
   cool_cop: COP Raff.
   cool_delivered: En. Raff. Prod. Ieri
@@ -95,3 +100,5 @@ substitutions:
   z2_return_temp: Z2 T. Ritorno Liq. Refr.
   status_water_pump: Pompa Circolazione
   status_water_pump_2: Pompa Circolazione 2
+  fault_code_text: Codice di errore
+  refrigerant_error_code_text: Liq. Refr. codice di errore
