--- a/confs/ecodan-labels-nl.yaml
+++ b/confs/ecodan-labels-nl.yaml
@@ -33,6 +33,7 @@ substitutions:
   status_prohibit_cool_z1: Status zone 1 verboden koelen
   status_prohibit_heating_z1: Status zone 1 verboden verwarmen
   heatpump_climate_z1: Zone 1 Thermostaat
+  heatpump_climate_room_z1: Zone 1 temperatuur
   z1_room_temp_target: Zone 1 ruimte setpoint waarde
   z1_room_temp: Zone 1 ruimte temp
   heatpump_number_z2_set_flow_temperature: Zone 2 flow setpoint
@@ -41,13 +42,17 @@ substitutions:
   status_prohibit_heating_z2: Status zone 2 verboden verwarmen
   heatpump_number_z2_set_room_temperature: Zone 2 ruimte setpoint
   heatpump_climate_z2: Zone 2 Thermostaat
+  heatpump_climate_room_z2: Zone 2 temperatuur
   z2_room_temp_target: Zone 2 ruimte setpoint waarde
   z2_room_temp: Zone 2 ruimte temp
+  mixing_tank_temp: Mixing Tank Temp
   boiler_flow_temp: Boiler aanvoer temp
   boiler_return_temp: Boiler retour temp
   status_booster: Status booster heater
   compressor_frequency: Kompressor frequentie
   controller_version_text: Controller versie
+  controller_firmware_text: Controller Firmware
+  controller_datetime_text: Controller Datum
   cool_consumed: Koelen verbruikt
   cool_cop: Koelen cop
   cool_delivered: Koelen geleverd
@@ -95,3 +100,5 @@ substitutions:
   z2_return_temp: Z2 Retour temp
   status_water_pump: Status water pomp
   status_water_pump_2: Status water pomp 2
+  fault_code_text: Fout code
+  refrigerant_error_code_text: Koelmiddel fout code
