--- a/confs/server-control.yaml
+++ b/confs/server-control.yaml
@@ -1,6 +1,6 @@
   switch:
   - platform: template
-    name: SC - Inaktivera/Aktivera
+    name: server control - enable/disable
     id: heatpump_switch_server_control_mode
     restore_mode: RESTORE_DEFAULT_OFF
     optimistic: true
@@ -12,7 +12,7 @@
          id(ecodan_instance).set_controller_mode(esphome::ecodan::CONTROLLER_FLAG::SERVER_CONTROL, false);
 
   - platform: template
-    name: SC - Förbjud VV
+    name: server control - prohibit DHW
     id: heatpump_switch_server_control_prohibit_dhw
     restore_mode: RESTORE_DEFAULT_OFF
     optimistic: true
@@ -32,7 +32,7 @@
             id(ecodan_instance).set_controller_mode(esphome::ecodan::CONTROLLER_FLAG::PROHIBIT_DHW, false);
 
   - platform: template
-    name: SC - Zon1 Förbjud Värme
+    name: server control - zone 1 prohibit heating
     id: heatpump_switch_server_control_prohibit_z1_heating
     restore_mode: RESTORE_DEFAULT_OFF
     optimistic: true
@@ -53,7 +53,7 @@
 
 
   - platform: template
-    name: SC - Zon1 Förbjud Kyla
+    name: server control - zone 1 prohibit cooling
     id: heatpump_switch_server_control_prohibit_z1_cooling
     restore_mode: RESTORE_DEFAULT_OFF
     optimistic: true
@@ -73,7 +73,7 @@
             id(ecodan_instance).set_controller_mode(esphome::ecodan::CONTROLLER_FLAG::PROHIBIT_Z1_COOLING, false);
 
   - platform: template
-    name: SC - Zon2 Förbjud Värme
+    name: server control - zone 2 prohibit heating
     id: heatpump_switch_server_control_prohibit_z2_heating
     restore_mode: RESTORE_DEFAULT_OFF
     optimistic: true
@@ -94,7 +94,7 @@
 
 
   - platform: template
-    name: SC - Zon2 Förbjud Kyla
+    name: server control - zone 2 prohibit cooling
     id: heatpump_switch_server_control_prohibit_z2_cooling
     restore_mode: RESTORE_DEFAULT_OFF
     optimistic: true
